# gcode

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
gcode/: __init__.py  basic_parser.py  bgcode_parser.py  command.py  gcode_command.py  gcode_parser.py  gcode_validator.py  gcode_validator_rules.py  meatpack.py  parser.py  validator.py  validator_rules.py
specification/: README.md  bgcode.md  buddy.html  buddy.md  gcode-specification.txt  gcode.md  prusa.md
src/gcode_file/: __init__.py  file.py  types.py
src/gcode_file/bgcode/: meatpack.py  parser.py
src/gcode_file/gcode/: basic_parser.py  command.py  parser.py  validator.py  validator_rules.py
tests/: test_basic_parser.py  test_bgcode_parser.py  test_meatpack.py  test_parser.py  test_thumbnail.py
tests/bgcode/: test_meatpack.py  test_parser.py
tests/fixtures/: 3DBenchy (5 Colours)_0.4n_0.2mm_PETG,PETG,PETG,PETG,PETG_XLIS_2h34m.bgcode  Apple Chancery.gcode  lines.3mf  lines_0.4n_0.2mm_PETG_XLIS_57s.bgcode  lines_0.4n_0.2mm_PETG_XLIS_57s.gcode  mmu3_pla_ 5colors_3dbenchy_0.4n_0.2mm__MK4IS3h24m.bgcode  simple.gcode
tests/gcode/: test_basic_parser.py  test_file.py  test_thumbnail.py
