[project]
name = "gcode-file"
version = "0.1.0"
authors = [{ name = "Andrew Brampton", email = "github@bramp.net" }]
description = "Python library for parsing G-Code, Binary G-Code files, and related metadata (thumbnails, slicer settings, etc)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bramp/gcode"
Issues = "https://github.com/bramp/gcode/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
[tool.hatch]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
